src/github.com/ebay/beam/query/parser/testdata/ask/errors/ask_order.res
Query:
ASK 
WHERE {
	?rims <color> "white"
}
ORDER BY ?rims

Parsed:
Error: unable to parse query: line 5 column 1: unparsed text: 'ORDER BY ?rims'
